--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -1,17 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
                                              android:background="#000000">
 
-    <ImageView
-            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/detail_post_imageView"
-            android:scaleType="fitCenter"
-            android:foregroundGravity="center"
+    <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:adjustViewBounds="true"/>
+            android:id="@+id/postDetail_rycyclerView"
+            app:layout_constraintBottom_toTopOf="@+id/view3"/>
+    <View
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:id="@+id/view3"
+            android:background="#FFFFFF"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
+
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:id="@+id/editText"
+            app:layout_constraintStart_toStartOf="@+id/view3"
+            app:layout_constraintTop_toTopOf="@+id/view3"
+            app:layout_constraintBottom_toBottomOf="@+id/view3" android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/imageView3"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:hint="Comment"/>
+    <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp" app:srcCompat="@drawable/commenticon"
+            android:id="@+id/imageView3"
+            app:layout_constraintEnd_toEndOf="@+id/view3" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/view3"
+            app:layout_constraintTop_toTopOf="@+id/view3"/>
+
 </android.support.constraint.ConstraintLayout>
