--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -50,13 +50,26 @@
             app:fontFamily="@font/basic"/>
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/googleg_standard_color_18"
             android:id="@+id/post_main_imageView"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:scaleType="fitCenter" android:adjustViewBounds="true"/>
+    <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp" app:srcCompat="@drawable/commenticon"
+            android:id="@+id/comment_imageView" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView"
+            app:layout_constraintStart_toEndOf="@+id/like_imageView" android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"/>
+    <ImageView
+            android:layout_width="25dp"
+            android:layout_height="20dp" app:srcCompat="@drawable/likeicon"
+            android:id="@+id/like_imageView" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
@@ -70,7 +83,7 @@
             android:layout_marginRight="16dp"
             app:fontFamily="@font/basic"
             android:textColor="@android:color/white"
-            android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_main_imageView" android:layout_marginTop="16dp"/>
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="32dp"/>
 </android.support.constraint.ConstraintLayout>
