--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -9,9 +9,21 @@
     <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp" app:srcCompat="@drawable/user123"
-            android:id="@+id/comment_profile_imageView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
+            android:id="@+id/imageView4"
+            app:layout_constraintTop_toTopOf="@+id/comment_profile_imageView"
+            app:layout_constraintEnd_toEndOf="@+id/comment_profile_imageView"
+            app:layout_constraintStart_toStartOf="@+id/comment_profile_imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/comment_profile_imageView"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/user123"
+            android:id="@+id/comment_profile_imageView"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"/>
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
@@ -21,7 +33,7 @@
             app:layout_constraintStart_toEndOf="@+id/comment_profile_imageView"
             android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp" app:fontFamily="@font/basic"
-            android:textSize="18sp" android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"/>
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
@@ -35,11 +47,11 @@
             android:text="TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/date_textView"
+            android:id="@+id/comment_date_textView"
             app:layout_constraintTop_toBottomOf="@+id/comment_textView"
             app:layout_constraintStart_toStartOf="@+id/comment_textView"
             app:layout_constraintEnd_toEndOf="@+id/comment_textView" app:fontFamily="@font/basic"
-            android:textSize="12sp"
+            android:textSize="10sp"
             android:textColor="@android:color/darker_gray" android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
