--- a/app/src/main/res/layout/post_main_row.xml
+++ b/app/src/main/res/layout/post_main_row.xml
@@ -50,13 +50,14 @@
             app:fontFamily="@font/basic"/>
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/googleg_standard_color_18"
+            android:layout_height="wrap_content"
             android:id="@+id/post_main_imageView"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic_imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="fitCenter" android:adjustViewBounds="true"/>
+            android:scaleType="fitCenter" android:adjustViewBounds="true"
+            app:srcCompat="@drawable/ic_launcher_foreground"/>
     <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp" app:srcCompat="@drawable/commenticon"
@@ -84,6 +85,7 @@
             app:fontFamily="@font/basic"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="32dp"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/comment_imageView" android:layout_marginBottom="32dp"
+            app:layout_constraintVertical_bias="0.287" android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
