--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="#000000">
+                                             android:background="#000000" android:id="@+id/signOut_textView">
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
@@ -101,4 +102,12 @@
             android:layout_marginLeft="32dp"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+    <TextView
+            android:text="Sign Out"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/about_textView"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/about_textView" android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
 </android.support.constraint.ConstraintLayout>
