--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -8,16 +8,18 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/recyclerView_post_detail"
-            android:paddingBottom="60dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/view3" android:paddingBottom="8dp"
+    />
     <View
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="48dp"
             android:id="@+id/view3"
-
+            android:background="@drawable/rounded_white_textview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -27,24 +29,29 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
             android:ems="10"
             android:id="@+id/commentAdd_text"
             app:layout_constraintStart_toStartOf="@+id/view3"
-            app:layout_constraintTop_toTopOf="@+id/view3"
             app:layout_constraintBottom_toBottomOf="@+id/view3"
-            android:hint="Comment"
-            android:textColorHint="#FFFFFF"
-            android:textSize="14sp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
-            android:textColor="@android:color/white" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/comment_send_button" android:layout_marginRight="16dp"/>
+            android:hint="berikan komentar positif"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="12sp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:textColor="@android:color/white"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/comment_send_button"
+            android:layout_marginRight="16dp"
+            android:singleLine="true"
+            android:inputType="text"
+            app:layout_constraintTop_toTopOf="@+id/view3"/>
     <Button
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:id="@+id/comment_send_button"
-            android:background="@drawable/round_send_white_24dp" app:layout_constraintEnd_toEndOf="@+id/view3"
+            android:background="@drawable/send" app:layout_constraintEnd_toEndOf="@+id/view3"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/view3"/>
+            app:layout_constraintTop_toTopOf="@+id/commentAdd_text"
+            app:layout_constraintBottom_toBottomOf="@+id/commentAdd_text"/>
 
 </android.support.constraint.ConstraintLayout>
