--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -35,73 +35,75 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-            android:text=" User Name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            app:fontFamily="@font/assistant"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/view"/>
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text=" User Name"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        app:fontFamily="@font/basic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <EditText
-            android:id="@+id/username_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+        android:id="@+id/username_textView"
+        android:layout_width="0dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
+        app:fontFamily="@font/basic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-            android:text=" About"
-            android:layout_width="0dp"
-            android:layout_height="14dp"
-            android:id="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
-            app:fontFamily="@font/assistant"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/username_textView"/>
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="14dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text=" About"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        app:fontFamily="@font/basic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_textView" />
 
     <EditText
-            android:id="@+id/about_textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@android:color/white"
-            app:fontFamily="@font/assistant_bold"
-            android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+        android:id="@+id/about_textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
+        app:fontFamily="@font/basic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
     <TextView
             android:text="Sign Out"
             android:layout_width="wrap_content"
