--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,22 +25,24 @@
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:textColorHint="@android:color/darker_gray"/>
+            android:textColorHint="@android:color/darker_gray" android:singleLine="true"
+            android:textColor="@android:color/darker_gray"/>
 
     <EditText
-        android:id="@+id/textView_pass_login"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_white_textview"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView_email_login"
-        app:layout_constraintStart_toStartOf="@+id/textView_email_login"
-        app:layout_constraintTop_toBottomOf="@+id/textView_email_login"
-        android:textColorHint="@android:color/darker_gray"/>
+            android:id="@+id/textView_pass_login"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_white_textview"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/textView_email_login"
+            app:layout_constraintStart_toStartOf="@+id/textView_email_login"
+            app:layout_constraintTop_toBottomOf="@+id/textView_email_login"
+            android:textColorHint="@android:color/darker_gray" android:singleLine="true"
+            android:textColor="@android:color/darker_gray"/>
 
     <Button
             android:id="@+id/button_login"
