--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,37 +27,40 @@
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
-            android:textColorHint="@android:color/darker_gray"/>
+            android:textColorHint="@android:color/darker_gray" android:singleLine="true"
+            android:textColor="@android:color/darker_gray"/>
 
     <EditText
-        android:id="@+id/password_register"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_white_textview"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/email_register"
-        app:layout_constraintStart_toStartOf="@+id/email_register"
-        app:layout_constraintTop_toBottomOf="@+id/email_register"
-        android:textColorHint="@android:color/darker_gray"/>
+            android:id="@+id/password_register"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_white_textview"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/email_register"
+            app:layout_constraintStart_toStartOf="@+id/email_register"
+            app:layout_constraintTop_toBottomOf="@+id/email_register"
+            android:textColorHint="@android:color/darker_gray" android:singleLine="true"
+            android:textColor="@android:color/darker_gray"/>
 
     <EditText
-        android:id="@+id/email_register"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_white_textview"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:paddingLeft="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/username_register"
-        app:layout_constraintStart_toStartOf="@+id/username_register"
-        app:layout_constraintTop_toBottomOf="@+id/username_register"
-        android:textColorHint="@android:color/darker_gray"/>
+            android:id="@+id/email_register"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_white_textview"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/username_register"
+            app:layout_constraintStart_toStartOf="@+id/username_register"
+            app:layout_constraintTop_toBottomOf="@+id/username_register"
+            android:textColorHint="@android:color/darker_gray" android:singleLine="true"
+            android:textColor="@android:color/darker_gray"/>
 
     <Button
             android:id="@+id/button_registerMain"
