--- a/app/src/main/res/layout/event_main_row.xml
+++ b/app/src/main/res/layout/event_main_row.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/eventTitle_textView"/>
     <TextView
             android:text="date"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:id="@+id/pdate_textView"
             android:textColor="@android:color/darker_gray"
@@ -33,7 +33,8 @@
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/imageView15"
             app:layout_constraintBottom_toBottomOf="@+id/imageView15"
-            app:layout_constraintVertical_bias="0.0" android:textSize="14sp"/>
+            app:layout_constraintVertical_bias="0.0" android:textSize="14sp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -99,7 +100,8 @@
             android:id="@+id/imageView17"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView16"
-            app:layout_constraintStart_toStartOf="@+id/imageView16"/>
+            app:layout_constraintStart_toStartOf="@+id/imageView16" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:text="comment"
             android:layout_width="0dp"
@@ -126,15 +128,4 @@
             app:layout_constraintStart_toEndOf="@+id/imageView14" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:textColor="@android:color/darker_gray" android:textSize="14sp"/>
-    <Button
-            android:text="Save"
-            android:layout_width="0dp"
-            android:layout_height="34dp"
-            android:id="@+id/button2"
-            android:background="@drawable/rounded_white_textview" android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="@+id/view3"
-            app:layout_constraintStart_toStartOf="@+id/view3" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/view3" android:textSize="14sp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
